--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <div class="header">
   <div id="nav-pc">
     <ul class="nav-bar">
+      <span [ngClass]="icone"></span>
       <li><a [routerLink]="[ '/' ]"><strong class="otake">OTAKE</strong></a></li>
       <li><a [routerLink]="[ '/tickets' ]" routerLinkActive="active">TICKETS</a></li>
       <li><a [routerLink]="[ '/students' ]" routerLinkActive="active">STUDENTS</a></li>
