--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,5 +1,5 @@
 <div [class.loader-hidden]="!show">
   <div class="loader-overlay">
-    <div class="loader-bar" [style.width.%]="load" *ngIf="show"></div>
+    <div class="loader-bar" [style.margin-left.%]="load" *ngIf="show"></div>
   </div>
 </div>
