--- a/src/app/loader/loader.component.scss
+++ b/src/app/loader/loader.component.scss
@@ -8,16 +8,14 @@
     left: 0;
     opacity: 1;
     z-index: 500000;
-    height: 10px;
-    margin-bottom: 20px;
+    height: 5px;
     overflow: hidden;
     background-color: #f5f5f5;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
 }
 
 .loader-bar {
-    float: left;
     height: 100%;
+    width: 30%;
     background-color: #428bca;
-    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
+    transition: margin-left 1.0s ease;
 }
